src/test/deca/codegen/invalid/class-champs/field_class_member_no_init.deca
// Description:
//    Declaration de classe avec des champs objet
//
// Resultats:
//    Erreur deref null
//
// Historique:
//    cree le 01/01/2022

class A {
    int x = 1;
}
class B {
    A a;
}

{
    B b = new B();
    println(b.a.x);
}